Refactor tests to use factory_boy and randomly

--- a/pytest.ini
+++ b/pytest.ini
@@ -1,4 +1,4 @@
 [pytest]
 DJANGO_SETTINGS_MODULE=config.settings.test
 norecursedirs = node_modules
-addopts = -p no:randomly
+# addopts = -p no:randomly
