Specify IPython Pdb in pytest.ini

--- a/pytest.ini
+++ b/pytest.ini
@@ -1,4 +1,4 @@
 [pytest]
-DJANGO_SETTINGS_MODULE=config.settings.test
+DJANGO_SETTINGS_MODULE = config.settings.test
 norecursedirs = node_modules
-# addopts = -p no:randomly
+addopts = --pdbcls=IPython.terminal.debugger:Pdb
