--- a/compose/local/django/Dockerfile
+++ b/compose/local/django/Dockerfile
@@ -15,6 +15,9 @@ RUN apk update \
   # https://docs.djangoproject.com/en/dev/ref/django-admin/#dbshell
   && apk add postgresql-client
 
+# Update pip
+RUN pip install -U pip
+
 # Requirements are installed here to ensure they will be cached.
 COPY ./requirements /requirements
 RUN pip install -r /requirements/local.txt
